--- a/app/src/counter/Counter.css
+++ b/app/src/counter/Counter.css
@@ -3,9 +3,35 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 60%;
+  margin: 0 auto;
+  gap: 30px;
 }
 
-.Counter__count {
+.Counter__control {
+  display: flex;
+  gap: 10px;
+  padding: 20px;
+  border: 1px solid #ccc;
+}
+
+.Counter__control__count {
   font-weight: 600;
   color: blue;
+}
+
+.Counter__control__btn {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: blue;
+  color: white;
+  cursor: pointer;
+}
+
+.Counter__nav {
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
 }
